cloud-engineering-roadmap/kubernetes/paysecure-k8s/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: paysecure-prod
  labels:
    environment: production
    project: paysecure
