cloud-engineering-roadmap/kubernetes/paysecure-k8s/02-database.yaml
postgres
          image: postgres:15-alpine
          ports:
            - containerPort: 5432
          env:
            - name: POSTGRES_DB
              valueFrom:
                configMapKeyRef:
                  name: paysecure-config
                  key: DB_NAME
            - name: POSTGRES_USER
              valueFrom:
                secretKeyRef:
                  name: paysecure-secret
                  key: DB_USER
            - name: POSTGRES_PASSWORD
              valueFrom:
                secretKeyRef:
                  name: paysecure-secret
                  key: DB_PASSWORD
          volumeMounts:
            - name: db-data
              mountPath: /var/lib/postgresql/data
      volumes:
        - name: db-data
          persistentVolumeClaim:
            claimName: postgres-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: postgres-svc
  namespace: paysecure-prod
spec:
  type: ClusterIP
  selector:
    app: paysecure-db
  ports:
    - port: 5432
      targetPort: 5432
