cloud-engineering-roadmap/kubernetes/paysecure-k8s/03-backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: payment-api-deploy
  namespace: paysecure-prod
  labels:
    app: payment-api
spec:
  replicas: 2
  selector:
    matchLabels:
      app: payment-api
  template:
    metadata:
      labels:
        app: payment-api
    spec:
      containers:
        - name: api
          image: nginx:alpine
          ports:
            - containerPort: 80
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "250m"
              memory: "256Mi"
          startupProbe:
            httpGet:
              path: /
              port: 80
            failureThreshold: 10
            periodSeconds: 2
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 3
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  name: payment-api-svc
  namespace: paysecure-prod
spec:
  type: ClusterIP
  selector:
    app: payment-api
  ports:
    - port: 80
      targetPort: 80
