cloud-engineering-roadmap/kubernetes/paysecure-k8s/04-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: paysecure-ingress
  namespace: paysecure-prod
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
    - host: api.paysecure.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: payment-api-svc
                port:
                  number: 80
